--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,74 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.tw-follow-card {
+  display: flex;
+  align-items: center;
+  color: #fff;
+  font-size: 0.8rem;
+  justify-content: space-between;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.tw-follow-card-header {
+  display: flex;
+  align-items: center;
+  gap: 4px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tw-follow-card-info {
+  display: flex;
+  flex-direction: column;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.tw-follow-card-header span {
+  opacity: 0.6;
 }
 
-.card {
-  padding: 2em;
+.tw-follow-card-avatar {
+  width: 48px;
+  height: 48px;
+  border-radius: 1000px;
 }
 
-.read-the-docs {
-  color: #888;
+.tw-follow-card-button {
+  margin-left: 16px;
+  border: 0;
+  border-radius: 999px;
+  padding: 6px 16px;
+  font-weight: bold;
+}
+
+.tw-follow-card-button:hover {
+  background-color: #fff;
+  transition: 0.3s ease background-color;
+}
+
+.tw-follow-card-button.is-following {
+  background-color: #ffffff09;
+  border: 1px solid red;
+  color: red;
+}
+
+.tw-follow-card-button:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+.tw-follow-card-follow-text {
+  display: block;
+}
+
+.tw-follow-card-button.is-following:hover .tw-follow-card-follow-text {
+  display: none;
+}
+
+.tw-follow-card-button.is-following:hover {
+  background: red;
+  color: #fff;
+  transition: 0.3s ease background-color;
+}
+
+.tw-follow-card-stop-follow {
+  display: none;
+}
+
+.tw-follow-card-button.is-following:hover .tw-follow-card-stop-follow {
+  display: block;
 }
